update: create model

--- a/gangan.ipynb
+++ b/gangan.ipynb
@@ -64,7 +64,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def build_discreminator(img_shape):\n",
+    "    \n",
+    "    model = Sequential()\n",
+    "    \n",
+    "    # 入力画像を一列に並べる\n",
+    "    model.add(Flatten(input))\n",
+    "    \n",
+    "    # 全結合層\n",
+    "    model.add(Dense(128))"
+   ]
   }
  ],
  "metadata": {
